--- a/apps/storage/.gitignore
+++ b/apps/storage/.gitignore
@@ -20,15 +20,7 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-discord_roller-*.tar
+storage-*.tar
 
 # Temporary files, for example, from tests.
 /tmp/
-
-*.toml
-
-/rsync
-/rsync.exclude
-/config/secret.exs
-/storage.bin
-/mnesia
